--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     - "6379:6379" # Expose Redis on the host machine so it can be accessed by for example a dashboard
 
   simplecdn:
-    image: ${DOCKER_REGISTRY-}simplecdn:local-dev
+    image: ghcr.io/jonathanbout/simplecdn:local-dev
     build:
       context: .
       dockerfile: SimpleCDN/Dockerfile
@@ -18,4 +18,4 @@ services:
     - CDN_DATA_ROOT=/data
     - ASPNETCORE_ENVIRONMENT=Development
     - Cache__Redis__ConnectionString=redis:6379 # Only needed if Cache__Type=Redis
-    - Cache__Type=Redis # Redis, InMemory, or Disabled
+    - Cache__Type=Disabled # Redis, InMemory, or Disabled
