--- a/.github/release.yml
+++ b/.github/release.yml
@@ -2,13 +2,19 @@ changelog:
   categories:
     - title: Breaking Changes 🛠
       labels:
-        - breaking-change
+        - "breaking change"
     - title: Exciting New Features 🎉
       labels:
         - enhancement
-    - title: Bug Fixes 🐞
+    - title: Bug Fixes 🪲
       labels:
         - bug
+    - title: Performance Improvements 🏎️
+      labels:
+        - performance
+    - title: Dependency Updates
+      labels:
+        - dependencies
     - title: Other Changes
       labels:
         - "*"
